--- a/plotly.ipynb
+++ b/plotly.ipynb
@@ -1194,7 +1194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "8dd8f30a",
    "metadata": {},
    "outputs": [
@@ -2582,16 +2582,8 @@
    "source": [
     "fig = px.scatter(df, x=\"SepalLengthCm\", y=\"PetalWidthCm\", color=\"Species\",\n",
     "                 size='PetalWidthCm', hover_data=['SepalLengthCm'])\n",
-    "fig.show()"
+    "fig.show()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7363945a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
